# AcceleratorPlugin

./: AUTHORS  CMakeLists.txt  NEWS  README  README.md  TODO
Framework/: DicomInstanceInfo.cpp  DicomInstanceInfo.h  DownloadArea.cpp  DownloadArea.h  OrthancInstancesCache.cpp  OrthancInstancesCache.h  SourceDicomInstance.cpp  SourceDicomInstance.h  StatefulOrthancJob.cpp  StatefulOrthancJob.h  TransferBucket.cpp  TransferBucket.h  TransferQuery.cpp  TransferQuery.h  TransferScheduler.cpp  TransferScheduler.h  TransferToolbox.cpp  TransferToolbox.h
Framework/HttpQueries/: DetectTransferPlugin.cpp  DetectTransferPlugin.h  HttpQueriesQueue.cpp  HttpQueriesQueue.h  HttpQueriesRunner.cpp  HttpQueriesRunner.h  IHttpQuery.h
Framework/PullMode/: BucketPullQuery.cpp  BucketPullQuery.h  PullJob.cpp  PullJob.h
Framework/PushMode/: ActivePushTransactions.cpp  ActivePushTransactions.h  BucketPushQuery.cpp  BucketPushQuery.h  PushJob.cpp  PushJob.h
Plugin/: Plugin.cpp  PluginContext.cpp  PluginContext.h
Resources/: OrthancExplorer.js  SyncOrthancFolder.py
UnitTests/: UnitTestsMain.cpp
